# mk-obwiki

./: pyproject.toml  setup.py
src/mk_obwiki/: __init__.py  plugin.py  utils.py
src/mk_obwiki/stylesheets/: extra.css
src/mk_obwiki/templates/partials/: content.html
